@@ -1,3 +1,7 @@
+2007-05-02 Erik Hjortsberg  <erik.hjortsberg@iteam.se> 
+
+	* src/components/ogre/widgets/EntityBrowser.layout, src/components/ogre/widgets/EntityBrowser.lua, src/components/ogre/widgets/Bootstrap.lua: added an entity browser widget which shows all entities in the world in a hierarchical list
+
 2007-05-01 Erik Hjortsberg  <erik.hjortsberg@iteam.se> 
 
 	* src/components/ogre/scripting/bindings/lua/EmberOgre.pkg, src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp, src/components/ogre/scripting/bindings/lua/required.h, src/components/ogre/scripting/bindings/lua/ConsoleAdapter.pkg: updated bindings
